--- a/fileinstall/pom.xml
+++ b/fileinstall/pom.xml
@@ -60,7 +60,7 @@
     <dependency>
       <groupId>org.apache.felix</groupId>
       <artifactId>org.apache.felix.utils</artifactId>
-      <version>1.10.5-SNAPSHOT</version>
+      <version>1.11.2</version>
     </dependency>
   </dependencies>
   <build>
