--- a/tools/maven-bundle-plugin/pom.xml
+++ b/tools/maven-bundle-plugin/pom.xml
@@ -174,11 +174,11 @@
     <artifactId>biz.aQute.bndlib</artifactId>
     <version>4.2.0</version>
   </dependency>
-     <dependency>
-         <groupId>org.slf4j</groupId>
-         <artifactId>slf4j-api</artifactId>
-         <version>1.7.25</version>
-     </dependency>
+  <dependency>
+    <groupId>org.slf4j</groupId>
+    <artifactId>slf4j-api</artifactId>
+    <version>1.7.25</version>
+  </dependency>
   <dependency>
     <groupId>org.apache.felix</groupId>
     <artifactId>org.apache.felix.bundlerepository</artifactId>
@@ -212,12 +212,12 @@
   <dependency>
    <groupId>org.apache.maven.shared</groupId>
    <artifactId>maven-dependency-tree</artifactId>
-   <version>2.1</version>
+   <version>3.0</version>
   </dependency>
   <dependency>
    <groupId>org.codehaus.plexus</groupId>
    <artifactId>plexus-utils</artifactId>
-   <version>3.0.10</version>
+   <version>3.0.24</version>
   </dependency>
   <dependency>
    <groupId>org.sonatype.plexus</groupId>
@@ -241,9 +241,9 @@
    <scope>provided</scope>
   </dependency>
   <dependency>
-   <groupId>org.apache.maven.shared</groupId>
+   <groupId>org.apache.maven.plugin-testing</groupId>
    <artifactId>maven-plugin-testing-harness</artifactId>
-   <version>1.1</version>
+   <version>3.3.0</version>
    <scope>test</scope>
   </dependency>
   <dependency>
